--- a/views/home.erb
+++ b/views/home.erb
@@ -16,5 +16,19 @@
         </button>
       </p>
     </form>
+
+    <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+      <h2 class="w3-jumbo"><u>Current Projects</u></h2>
+      <p></p>
+    </header>
+      <% @project_list.each() do |project| %>
+      <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
+            <div class="w3-center w3-section">
+              <span class="w3-xlarge"><a href="projects/<%= project.id %>"><%= project.title %></a></span><br>
+              <%= project.details %>
+            </div>
+          </div>
+      <% end %>
+
   <!-- End Contact Section -->
   </div>
