--- a/views/volunteer.erb
+++ b/views/volunteer.erb
@@ -15,13 +15,10 @@
 
 
   <form action="/volunteers/<%= @volunteer.id %>" method="post">
-    <p>Change Project <select name="project_id">
-      <% @project_list.each do |project| %>
-        <option value="<%= project.id %>"><%= project.title %></option>
-      <% end %>
-    </select>
+    <p>Change name
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Enter New Name" required name="name"></p>
     <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-      <i class="far fa-hand-peace"></i> &nbsp;&nbsp;Re-Assign
+      <i class="far fa-hand-peace"></i> &nbsp;&nbsp;Change Name
     </button>
     </p>
   </form>
