--- a/views/volunteers.erb
+++ b/views/volunteers.erb
@@ -2,6 +2,9 @@
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><u><span class="w3-hide-small">We are RED</span></u></h1>
+    <% if @project_list.length == 0 %>
+      <h2>Can't add a volunteer with out a Project</h2>
+    <% else %>
     <h2>Add a Volunteer below</h2>
     <p></p>
   </header>
@@ -24,9 +27,12 @@
   <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
         <div class="w3-center w3-section">
           <span class="w3-xlarge"><a href="volunteers/<%= volunteer.id %>"><%= volunteer.name %></a></span><br>
-          Current Project :<%= Project.find(volunteer.project_id).title %>
+          Current Project :<% if volunteer.project_id != 0 %>
+            <%= Project.find(volunteer.project_id).title %>
+          <% end %>
         </div>
       </div>
+  <% end %>
   <% end %>
 
 </div>
